--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "browserify": "^11.2.0",
     "event-stream": "^3.3.1",
     "exorcist": "^0.4.0",
+    "factor-bundle": "^2.5.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-file-assets": "^1.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-util": "^3.0.6",
-    "lodash": "^3.10.1",
+    "lodash": "^4.0.0",
     "parcel-map": "^3.0.0",
     "parcelify": "^2.1.0",
     "vinyl-source-stream": "^1.1.0",
