--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.0.0",
     "parcel-map": "^3.0.0",
     "parcelify": "^2.1.0",
+    "rimraf": "^2.5.2",
     "semver": "^5.1.0",
     "through2": "^2.0.1",
     "vinyl-source-stream": "^1.1.0",
